cbits/Bullet.h

void* btRigidBody_getBroadphaseProxy(void *c); //method: getBroadphaseProxy ::btBroadphaseProxy const * ( ::btRigidBody::* )(  ) const
void* btRigidBody_getBroadphaseProxy0(void *c); //method: getBroadphaseProxy ::btBroadphaseProxy const * ( ::btRigidBody::* )(  ) const
void* btRigidBody_getBroadphaseProxy1(void *c); //method: getBroadphaseProxy ::btBroadphaseProxy * ( ::btRigidBody::* )(  ) 
void* btRigidBody_getCollisionShape(void *c); //method: getCollisionShape ::btCollisionShape const * ( ::btRigidBody::* )(  ) const
void* btRigidBody_getCollisionShape0(void *c); //method: getCollisionShape ::btCollisionShape const * ( ::btRigidBody::* )(  ) const
void* btRigidBody_getCollisionShape1(void *c); //method: getCollisionShape ::btCollisionShape * ( ::btRigidBody::* )(  ) 
void* btRigidBody_upcast(void* p0); //method: upcast ::btRigidBody const * (*)( ::btCollisionObject const * )
void* btRigidBody_upcast0(void* p0); //method: upcast ::btRigidBody const * (*)( ::btCollisionObject const * )
void* btRigidBody_upcast1(void* p0); //method: upcast ::btRigidBody * (*)( ::btCollisionObject * )
int btRigidBody_checkCollideWithOverride(void *c,void* p0); //method: checkCollideWithOverride bool ( ::btRigidBody::* )( ::btCollisionObject * ) 
void btRigidBody_translate(void *c,float* p0); //method: translate void ( ::btRigidBody::* )( ::btVector3 const & ) 
void btRigidBody_updateInertiaTensor(void *c); //method: updateInertiaTensor void ( ::btRigidBody::* )(  ) 
void btRigidBody_applyForce(void *c,float* p0,float* p1); //method: applyForce void ( ::btRigidBody::* )( ::btVector3 const &,::btVector3 const & ) 
void btRigidBody_internalGetAngularVelocity(void *c,float* p0); //method: internalGetAngularVelocity void ( ::btRigidBody::* )( ::btVector3 & ) const
void btRigidBody_setupRigidBody(void *c,void* p0); //method: setupRigidBody void ( ::btRigidBody::* )( ::btRigidBody::btRigidBodyConstructionInfo const & ) 
void btRigidBody_applyCentralImpulse(void *c,float* p0); //method: applyCentralImpulse void ( ::btRigidBody::* )( ::btVector3 const & ) 
void btRigidBody_getTurnVelocity(void *c,float* ret); //method: getTurnVelocity ::btVector3 const & ( ::btRigidBody::* )(  ) const
void btRigidBody_getDeltaLinearVelocity(void *c,float* ret); //method: getDeltaLinearVelocity ::btVector3 const & ( ::btRigidBody::* )(  ) const
void btRigidBody_integrateVelocities(void *c,float p0); //method: integrateVelocities void ( ::btRigidBody::* )( ::btScalar ) 
void btRigidBody_getGravity(void *c,float* ret); //method: getGravity ::btVector3 const & ( ::btRigidBody::* )(  ) const
void btRigidBody_setMassProps(void *c,float p0,float* p1); //method: setMassProps void ( ::btRigidBody::* )( ::btScalar,::btVector3 const & ) 
void btRigidBody_setCenterOfMassTransform(void *c,float* p0); //method: setCenterOfMassTransform void ( ::btRigidBody::* )( ::btTransform const & ) 
void btRigidBody_setFlags(void *c,int p0); //method: setFlags void ( ::btRigidBody::* )( int ) 